[package]
name = "silent-mqtt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = "https://github.com/silent-rs/silent"
readme = "./README.md"
repository = "https://github.com/silent-rs/silent"

[dependencies]
bytes = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
scru128 = "1"
chrono = { version = "0.4", features = ["clock"] }
silent = { path = "./silent/silent" }
http-body = "1"
